# HoloControl

./: .gitignore  README.md
HoloControl-PCB/: README.md  fp-info-cache  holo-controller-pcb.kicad_pcb  holo-controller-pcb.kicad_prl  holo-controller-pcb.kicad_pro  holo-controller-pcb.kicad_sch
HoloControl-Pico/: CMakeLists.txt  CMakePresets.json  colors.h  control.h  control_globals.c  control_globals.h  i_holo_controller.c  i_holo_controller.h  instructions.md  modes.h  translate_to_instruction.ps1
HoloControl-Pico/power/: input_color_switch.c  input_color_switch.h  input_mode_select.c  input_mode_select.h  input_run_button.c  input_run_button.h  output_buzzer.c  output_buzzer.h  output_color_switch.c  output_color_switch.h  output_finishing.c  output_finishing.h  output_laser.c  output_laser.h  output_status.c  output_status.h  power_main.c  power_main.h  power_pins.h
HoloControl-Pico/serial/: parser.c  parser.h  serial_main.c  serial_main.h
HoloControl-UI/: App.xaml  App.xaml.cs  HoloControl.csproj  HoloControl.sln  KioskShell.xaml  KioskShell.xaml.cs  MauiProgram.cs  StandardShell.xaml  StandardShell.xaml.cs
HoloControl-UI/Models/: ConnectionStatus.cs  PlatformConnectionManager.cs  SerialConnectionModel.cs
HoloControl-UI/ViewModels/: HistoryItem.cs  KioskViewModel.cs  RootViewModel.cs
Report/: MFFPrace.cls
Report/_Elektronicka dokumentace/: Chromaticka-holografie-Elektronicka-dokumentace.tex
Report/_Softwarova dokumentace/: Chromaticka-holografie-Softwarova-dokumentace.tex
Report/_Uzivatelsky manual/: Chromaticka-holografie-Uzivatelsky-manual.tex
(+25 files in other folders)
